# FreeRTOS-Emulator

./: .gitignore  .gitmodules  README.md
device_library/mock/freertos/: mock_event_groups.cpp  mock_queue.cpp  mock_tasks.cpp  mock_timers.cpp  portmacro.h
examples/build-threading-qt-Desktop_Qt_6_4_3_GCC_64bit-Debug/: threading-qt
examples/build-timers-qt-Desktop_Qt_6_4_3_GCC_64bit-Debug/: moc_simulator_rtos.cpp  timers-qt
examples/common/: FreeRTOSConfig.h
examples/queue-qt/: main-queue-qt.cpp  queue-qt.pro
examples/threading/: CMakeLists.txt  README.md  main-threading.c
examples/threading-qt/: main-threading-qt.cpp  threading-qt.pro
examples/threading/.cache/clangd/index/: main-threading.c.BBC012E5C2394B42.idx
examples/timers/: CMakeLists.txt  README.md  main-timers.c
examples/timers-qt/: main-timers-qt.cpp  timers-qt.pro
freertos-mock/: CMakeLists.txt  mock_event_groups.cpp  mock_queue.cpp  mock_tasks.cpp  mock_timers.cpp  portmacro.h
freertos-mock-qt/: freertos-mock-qt.pri  mock_event_groups.cpp  mock_queue.cpp  mock_tasks.cpp  mock_timers.cpp  portmacro.h  simulator_rtos.cpp  simulator_rtos.h
freertos-mock/timer/: internal_timer.h
host_app/device_library/mock/freertos/: FreeRTOSConfig.h  mock_event_groups.cpp  mock_queue.cpp  mock_tasks.cpp  mock_timers.cpp
mock/freertos/: _2_mock_port.c  __mock_port.c  interruptflags.cpp  microcontrollerenvironment.cpp  microcontrollerenvironment.h  mock_port.c  mock_timers.cpp  port.cpp  port_esp32_common.c  portmacro.h  pthread_pause.cpp  pthread_pause.h  simulatedtask.cpp  simulatedtask.h  tasktimer.cpp
mock/freertos/_linux/_include/freertos/: _portmacro.h
mock/freertos/linux/include/freertos/: portmacro.h
